--- a/sidebar.html
+++ b/sidebar.html
@@ -32,10 +32,14 @@
             <h2>Page Data</h2>
             <form id="page-data-form">
                 <label for="page_title">Page Title:</label>
-                <textarea id="page_title" name="page_title"></textarea><br><br>
+                <textarea id="page_title" name="page_title"></textarea>
+                <div id="page_title_counts"></div>
+                <br><br>
 
                 <label for="meta_description">Meta Description:</label>
-                <textarea id="meta_description" name="meta_description"></textarea><br><br>
+                <textarea id="meta_description" name="meta_description"></textarea>
+                <div id="meta_description_counts"></div>
+                <br><br>
 
                 <label for="meta_robots">Meta Robots:</label>
                 <textarea id="meta_robots" name="meta_robots"></textarea><br><br>
@@ -76,6 +80,18 @@
             <textarea id="response_headers" name="response_headers" class="large"></textarea><br><br>
         </div>
 
+
+        <div class="section">
+            <h2>Links on page</h2>
+            <label for="internal_links">Internal Links:</label>
+            <textarea id="internal_links" name="internal_links" class="large"></textarea><br><br>
+
+            <label for="external_links">External Links:</label>
+            <textarea id="external_links" name="external_links" class="large"></textarea><br><br>
+        </div>
+
+
+      
 
     </div>
 
