--- a/sidebar.html
+++ b/sidebar.html
@@ -12,8 +12,9 @@
     <div id="sidebar-content">
         <h1>SEO Sidebar</h1>
         <p>
-            <a href="https://haensel.pro" target="_blank" title="The creator of this shiny object">&raquo; haensel.pro</a><br>
-            <small>You can toggle this by clicking the extension icon in your browser.</small>
+            <a href="https://haensel.pro" target="_blank" title="The creator of this shiny object">&raquo;
+                haensel.pro</a><br>
+            <small>You can toggle this sidebar by clicking the extension icon in your browser.</small>
         </p>
 
         <div class="section">
@@ -47,6 +48,7 @@
                 <label for="canonical_url">Canonical URL:</label>
                 <input type="text" id="canonical_url" name="canonical_url">
                 <div id="canonical_is_same_as_url"></div>
+                <div><small>Note: GET parameters are stripped from the page URL</small></div>
                 <br><br>
 
                 <label for="page_load_time">Page Load Time (ms):</label>
@@ -75,6 +77,13 @@
         </div>
 
         <div class="section">
+            <h2>robots.txt</h2>
+            <label for="robots_txt">robots.txt:</label>
+            <textarea id="robots_txt" name="robots_txt"></textarea>
+        </div>
+
+
+        <div class="section">
             <h2>Response Headers</h2>
             <label for="response_headers">Response Headers:</label>
             <textarea id="response_headers" name="response_headers" class="large"></textarea><br><br>
@@ -90,8 +99,11 @@
             <textarea id="external_links" name="external_links" class="large"></textarea><br><br>
         </div>
 
+        <div class="section">
+            <h2>Download Page Data</h2>
+            <button id="download-json">Download data as JSON</button>
+        </div>
 
-      
 
     </div>
 
