Bugfix double loading of sidebar content. Added HTTP status code

--- a/sidebar.html
+++ b/sidebar.html
@@ -31,7 +31,12 @@
 
         <div class="section">
             <h2>Page Data</h2>
+        
             <form id="page-data-form">
+
+                <label for="http_status_code">HTTP Status Code</label>
+                <input type="text" id="http_status_code"><br><br>
+
                 <label for="page_title">Page Title:</label>
                 <textarea id="page_title" name="page_title"></textarea>
                 <div id="page_title_counts"></div>
