Added settings page (backgrond-color, sidebar width)

--- a/sidebar.html
+++ b/sidebar.html
@@ -13,7 +13,7 @@
         <h1>SEO Sidebar</h1>
         <p>
             <a href="https://haensel.pro" target="_blank" title="The creator of this shiny object">&raquo;
-                haensel.pro</a><br>
+                haensel.pro</a> &middot; <a id="openSettingsLink" href="#"> &raquo; Extension Settings</a> <br>
             <small>You can toggle this sidebar by clicking the extension icon in your browser.</small>
         </p>
 
@@ -113,6 +113,8 @@
     </div>
 
     <script src="scripts.js" defer></script>
+    <script src="sidebar_settings.js" defer></script>
+
 </body>
 
 </html>
