--- a/sidebar.html
+++ b/sidebar.html
@@ -87,6 +87,13 @@
             <textarea id="robots_txt" name="robots_txt"></textarea>
         </div>
 
+        <div class="section">
+            <h2>Sitemaps</h2>
+            <label for="sitemaps">Sitemaps from robots.txt:</label>
+            <textarea id="sitemaps" name="sitemaps"></textarea>
+        </div>
+
+
 
         <div class="section">
             <h2>Response Headers</h2>
