Bugfix in robots.txt url checker. Added extension update from private server

--- a/settings.html
+++ b/settings.html
@@ -23,6 +23,14 @@
 
         <div class="section">
             <h2>Links, Help and more</h2>
+            <p>
+                <h2>Important Information</h2>
+                <p>
+                    This sidebar doesn't use the chrome web store. Instead, updates will be coming from my private server.<br>
+                    Your IP might be logged by the server, as it is standard for a server to create log files. <br>
+                    I am not collecting any of your browsing data, though.
+                </p>
+            </p>
             <ul>
                 <li>
                     <a href="https://github.com/chrishaensel/seo-sidebar" target="_blank">SEO Sidebar Project on GitHub</a> (feel free to send a pull request)
