Removed private server updates since the extension is now available in the Chrome Web Store

--- a/settings.html
+++ b/settings.html
@@ -26,9 +26,7 @@
             <p>
                 <h2>Important Information</h2>
                 <p>
-                    This sidebar doesn't use the chrome web store. Instead, updates will be coming from my private server.<br>
-                    Your IP might be logged by the server, as it is standard for a server to create log files. <br>
-                    I am not collecting any of your browsing data, though.
+                    I am not collecting any of your browsing data.
                 </p>
             </p>
             <ul>
